--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^5.3.0",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
