--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
+    "universal-cookie": "^4.0.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
